fixed image proportions, fixed grid view spacing and created first draft of front page grid view

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,27 +3,25 @@ html {
     height: 100%;
 }
 
-.bg {
-    background-image: url("./images/ak.jpg");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
 .container {
-    display: grid;
-    grid-template-columns: 10rem 10 rem 10rem 10rem;
-    grid-gap: 1rem;
-    grid-auto-flow: row;
+    padding-left: 10px;
+    padding-top: 10px;
+    /* display: grid; */
+    display: flex;
+    grid-template-columns: 10rem 10rem 10rem 10rem; 
+    grid-gap: 1rem; 
+    grid-auto-flow: column;
     column-gap: 10px;
-    /* row-gap: 10px;
-    grid-template-columns: 60px;
-    grid-template-rows: 60px; */
+    row-gap: 10px;
+    grid-template-columns: 300px;
+    grid-template-rows: 300px;
+    
+
 }
 
 .item {
-    background-color: blue;
+    background-color: gray;
+    align-self: center;
     
 }
 
